Use my custom Detic module

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Detic"]
 	path = Detic
-	url = https://github.com/facebookresearch/Detic.git
+	url = https://github.com/HiroIshida/Detic.git
