Wget sample image and publish it as a topic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(detic_ros)
 
+# Download sample data
+add_custom_target(${PROJECT_NAME}_download_image ALL
+  COMMAND ${PROJECT_SOURCE_DIR}/test/prepare_test_data.sh)
+
 find_package(catkin REQUIRED
     std_msgs
     message_generation
