Setup package by prepare.sh in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ project(detic_ros)
 add_custom_target(${PROJECT_NAME}_download_image ALL
   COMMAND ${PROJECT_SOURCE_DIR}/test/prepare_test_data.sh)
 
+add_custom_target(${PROJECT_NAME}_setup_package ALL
+  COMMAND cd ${PROJECT_SOURCE_DIR} && ${PROJECT_SOURCE_DIR}/prepare.sh)
+
 find_package(catkin REQUIRED
     std_msgs
     message_generation
