Cron docker build

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -1,12 +1,18 @@
 name: TestDockerBuild
 
 on:
+    schedule:
+        - cron: '30 1,13 * * *'
     push:
         branches:
             - master
+        paths:
+            - 'Dockerfile'
     pull_request:
         branches:
             - master
+        paths:
+            - 'Dockerfile'
 
 jobs:
   docker_build:
