Define custom service

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,11 @@ add_message_files(
     SegmentationInfo.msg
 )
 
+add_service_files(
+    FILES
+    DeticSeg.srv
+)
+
 generate_messages(
     DEPENDENCIES
     std_msgs
