--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ ftfy==6.0.3
 regex==2022.1.18
 fasttext==0.9.2
 scikit-learn==1.0.2
+numpy==1.19
 lvis==0.5.3
 nltk==3.6.7
 git+https://github.com/openai/CLIP.git
