--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -1,18 +1,14 @@
-name: TestDockerBuild
+name: run rostest inside docker
 
 on:
     schedule:
-        - cron: '30 1,13 * * *'
+        - cron: '30 0 * * *'
     push:
         branches:
             - master
-        paths:
-            - 'Dockerfile'
     pull_request:
         branches:
             - master
-        paths:
-            - 'Dockerfile'
 
 jobs:
   docker_build:
@@ -32,3 +28,6 @@ jobs:
           with:
               push: false
               tags: detic_ros:latest
+        - name: rostest
+          run: |
+              docker run --rm detic_ros:latest /bin/bash -i -c "source ~/.bashrc; rostest detic_ros test_node.test"
