--- a/package.xml
+++ b/package.xml
@@ -13,7 +13,7 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>jsk_recognition_msgs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
-
+  <exec_depend>ffmpeg</exec_depend>
   <test_depend>rostest</test_depend>
   <test_depend>image_publisher</test_depend>
 </package>
