ci: use ubuntu 20.04

--- a/.github/workflows/peripheral.yml
+++ b/.github/workflows/peripheral.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   peripheral:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
         - name: Checkout Code
           uses: actions/checkout@v2
