ci: keep launch files in container to invoke rostest from outside

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -28,7 +28,7 @@ jobs:
           with:
               push: false
               tags: detic_ros:latest
-              build_args: INSTALL_JSK_PCL=false
+              build_args: REMOVE_LAUNCH_DIR=false
         - name: rostest
           run: |
               docker run --rm detic_ros:latest /bin/bash -i -c "source ~/.bashrc; rostest detic_ros test_node.test"
