--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -32,3 +32,6 @@ jobs:
         - name: rostest
           run: |
               docker run --rm detic_ros:latest /bin/bash -i -c "source ~/.bashrc; rostest detic_ros test_node.test"
+        - name: test main python scirpt
+          run: |
+              bash .github/workflows/check_container_running.sh
