--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,7 @@
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>std_srvs</exec_depend>
   <exec_depend>jsk_recognition_msgs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
 
