chore: fix mypi.ini and format

--- a/mypy.ini
+++ b/mypy.ini
@@ -29,6 +29,8 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 [mypy-std_msgs.*]
 ignore_missing_imports = True
+[mypy-std_srvs.*]
+ignore_missing_imports = True
 [mypy-jsk_recognition_msgs.*]
 ignore_missing_imports = True
 [mypy-cv2]
