ci: fix broken ci (#57)
* chore: fix mypi.ini and format

* docker: add option to keep launch file

* ci: dont remove launch file from image in ci

* ci: fix github yaml indentation

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -28,7 +28,9 @@ jobs:
           with:
               push: false
               tags: detic_ros:latest
-              build_args: INSTALL_JSK_PCL=false
+              build-args: | # for testing purposes only
+                INSTALL_JSK_PCL=false
+                KEEP_LAUNCH_FILES=true
         - name: rostest
           run: |
               docker run --rm detic_ros:latest /bin/bash -i -c "source ~/.bashrc; rostest detic_ros test_node.test"
