--- a/package.xml
+++ b/package.xml
@@ -7,14 +7,23 @@
   <license>MIT</license>
   <author>Hirokazu Ishida</author>
   <buildtool_depend>catkin</buildtool_depend>
-  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>.
+  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>
+  <buildtool_depend>python3-setuptools</buildtool_depend>
+  <build_depend>catkin_virtualenv</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>wget</build_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_srvs</exec_depend>
+  <exec_depend>jsk_common</exec_depend>
   <exec_depend>jsk_recognition_msgs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
+  <exec_depend>python3-rospkg</exec_depend>
 
   <test_depend>rostest</test_depend>
   <test_depend>image_publisher</test_depend>
+
+  <export>
+    <pip_requirements>requirements.txt</pip_requirements>
+  </export>
 </package>
