chore: tell mypy detic_ros module location

--- a/mypy.ini
+++ b/mypy.ini
@@ -4,7 +4,12 @@ exclude = Detic
 show_error_codes = True
 warn_unused_ignores = False
 check_untyped_defs = True
+mypy_path = src
 
+[mypy-setuptools.*]
+ignore_missing_imports = True
+[mypy-catkin_pkg.*]
+ignore_missing_imports = True
 [mypy-cv_bridge]
 ignore_missing_imports = True
 [mypy-rospy]
@@ -23,8 +28,6 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 [mypy-centernet.config]
 ignore_missing_imports = True
-[mypy-detic_ros.*]
-ignore_missing_imports = True
 [mypy-sensor_msgs.*]
 ignore_missing_imports = True
 [mypy-std_msgs.*]
@@ -40,4 +43,8 @@ ignore_missing_imports = True
 [mypy-tqdm]
 ignore_missing_imports = True
 [mypy-moviepy.*]
+ignore_missing_imports = True
+[mypy-detic_ros.msg]
+ignore_missing_imports = True
+[mypy-detic_ros.srv]
 ignore_missing_imports = True
