--- a/.github/workflows/peripheral.yml
+++ b/.github/workflows/peripheral.yml
@@ -17,15 +17,13 @@ jobs:
         - name: pip install formatters and mypy
           run: |
               pip3 install mypy flake8 isort
-        # Temporary commented out due to avoid testing submodule packages
-        # TODO (HiroIshida) fix
-        # - name: check by mypy
-        #   run: |
-        #       pip3 install -r requirements.txt
-        #       pip3 install numpy==1.23  # to enable numpy's type checking
-        #       mypy --version
-        #       mypy .
-
+        - name: check by mypy
+          run: |
+              rm node_script/detic node_script/third_party  # remove symlinks. (cannot configure to exclude them by mypy somehow)
+              pip3 install -r requirements.txt
+              pip3 install numpy==1.23  # to enable numpy's type checking
+              mypy --version
+              mypy .
         - name: check by isort and flake8
           run: |
               python3 -m isort example/ test/ node_script/
