--- a/package.xml
+++ b/package.xml
@@ -17,6 +17,7 @@
   <exec_depend>std_srvs</exec_depend>
   <exec_depend>jsk_common</exec_depend>
   <exec_depend>jsk_recognition_msgs</exec_depend>
+  <exec_depend>jsk_topic_tools</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>python3-rospkg</exec_depend>
 
