--- a/.github/workflows/peripheral.yml
+++ b/.github/workflows/peripheral.yml
@@ -14,17 +14,10 @@ jobs:
     steps:
         - name: Checkout Code
           uses: actions/checkout@v2
-        - name: pip install formatters and mypy
+        - name: pip install formatters
           run: |
-              pip3 install mypy flake8 isort
-        - name: check by mypy
-          run: |
-              rm node_script/detic node_script/third_party  # remove symlinks. (cannot configure to exclude them by mypy somehow)
-              pip3 install -r requirements.txt
-              pip3 install numpy==1.23  # to enable numpy's type checking
-              mypy --version
-              mypy .
+              pip3 install flake8 isort
         - name: check by isort and flake8
           run: |
-              python3 -m isort example/ test/ node_script/
+              python3 -m isort --check-only example/ test/ node_script/
               python3 -m flake8 example/ test/ node_script/
